exports[`Knocked when any field is empty 1`] = `
<div
  className="Knocked">
  <div
    className="FlashMessage">
    Welcome to Knocker!
  </div>
  <form>
    <label
      data-name="knocker-label">
      Who knocked?
      <input
        id="knocker"
        onChange={[Function bound updateKnocked]}
        type="text"
        value="" />
    </label>
    <label
      data-name="address-label">
      Where did you knock?
      <input
        id="address"
        onChange={[Function bound updateKnocked]}
        type="text"
        value="" />
    </label>
    <label
      data-name="notes-label">
      What happened?
      <textarea
        id="notes"
        onChange={[Function bound updateKnocked]}
        value="" />
    </label>
    <input
      disabled={true}
      onClick={[Function bound transmit]}
      type="submit" />
  </form>
</div>
`;

exports[`Knocked when form is submitted UNSUCCESSFULLY 1`] = `
<div
  className="Knocked">
  <div
    className="FlashMessage">
    Whoops!
  </div>
  <form>
    <label
      data-name="knocker-label">
      Who knocked?
      <input
        id="knocker"
        onChange={[Function bound updateKnocked]}
        type="text"
        value="FAIL" />
    </label>
    <label
      data-name="address-label">
      Where did you knock?
      <input
        id="address"
        onChange={[Function bound updateKnocked]}
        type="text"
        value="FAIL" />
    </label>
    <label
      data-name="notes-label">
      What happened?
      <textarea
        id="notes"
        onChange={[Function bound updateKnocked]}
        value="FAIL" />
    </label>
    <input
      disabled={false}
      onClick={[Function bound transmit]}
      type="submit" />
  </form>
</div>
`;

exports[`Knocked when the form is submitted successfully 1`] = `
<div
  className="Knocked">
  <div
    className="FlashMessage">
    Thanks heaps for knocking at 23 Something Street, Somewhere
  </div>
  <form>
    <label
      data-name="knocker-label">
      Who knocked?
      <input
        id="knocker"
        onChange={[Function bound updateKnocked]}
        type="text"
        value="Rick Sanchez" />
    </label>
    <label
      data-name="address-label">
      Where did you knock?
      <input
        id="address"
        onChange={[Function bound updateKnocked]}
        type="text"
        value="" />
    </label>
    <label
      data-name="notes-label">
      What happened?
      <textarea
        id="notes"
        onChange={[Function bound updateKnocked]}
        value="" />
    </label>
    <input
      disabled={true}
      onClick={[Function bound transmit]}
      type="submit" />
  </form>
</div>
`;
